# bbo-2

./: .gitignore  README.md  pyproject.toml  spec.md  yaml.py
orchestrator/: __init__.py  _yaml.py  assets.py  cli.py  datasets.py  deps.py  loader.py  report.py  runner.py
orchestrator/orchestrator/: __init__.py  _yaml.py  assets.py  cli.py  datasets.py  deps.py  loader.py  report.py  runner.py
orchestrator/orchestrator/scoring/: aggregator.py  base.py  custom.py  exact.py  llm.py
orchestrator/scoring/: __init__.py  aggregate.py  aggregator.py  base.py  custom.py  exact.py  llm.py
orchestrator/tests/: test_assets.py  test_cli.py  test_datasets.py  test_deps.py  test_loader.py  test_report.py  test_runner.py  test_scoring.py
orchestrator/tests/data/: service_definition.yaml  testsuite.json
services/order_service/: service_definition.yaml
services/order_service/api/: openapi.yaml
services/order_service/app/: main.py
services/order_service/tests/: test_cases.json
src/orchestrator/: __init__.py  assets.py  cli.py  datasets.py  deps.py  loader.py  report.py  runner.py  utils.py
test_parallel_sampling/: INDEX.md  QUICKSTART.md  README.md  TUTORIAL.md  demo.py  development_report.json  development_report_v2.json  parallel_orchestrator.py  parallel_orchestrator_v2.py  parallel_sampling_orchestrator.py  real_orchestrator.py  real_test_report.json  simple_parallel_sampling.py  test_dataset.json
tests/: sample_scorer.py  test_assets.py  test_cli.py  test_datasets.py  test_deps.py  test_loader.py  test_report.py  test_runner.py  test_scoring.py
(+28 files in other folders)
