[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbo-orchestrator"
version = "0.1.0"
description = "简化版的服务包编排器，实现多种打分器、资产管理与测试执行"
authors = [{name = "OpenAI Assistant", email = "assistant@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
bb = "orchestrator.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
